# sample-glue-job

./: LICENSE  README.md  data.csv  manifest.yaml  pyproject.toml  sonar-project.properties
.github/workflows/: deploy_to_aws.yml
aws/: cloudformation.yaml
src/sample_glue_job/: glue.py
tests/: test_glue.py
